...
        }
        AnimatedVisibility(
            visible = state.isExpanded,
            enter = fadeIn(),
            exit = fadeOut()
        ) {
            EventGrid(events = state.mappedSavedEvents, onEvent = onEvent)
        }
    }
}


@Preview
@Composable
fun CategoryCardPreview() {
    BetTrackTheme {
        Content(
            title = "Football",
            state = CategoryCardContract.CategoryCardState(),
            onEvent = {}
        )
    }
}

